<resources>
    <string name="app_name">Company Name</string>
    <string name="submit">Button</string>
    <string name="neo_agrotech">Company Name</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="s_n">S.N.</string>
    <string name="gstin">GSTIN</string>
    <string name="enter_name_here">Enter Name here</string>
    <string name="address">Address</string>
    <string name="particulars">PARTICULARS</string>
    <string name="hsn_code">HSN Code</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>

    <string-array name="praticular_array">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 44</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
        <item>Item 10</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>