<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#abcdef"
    android:padding="5dp"
    >

    <TextView
        android:id="@+id/psn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:text="@string/s_n"
        android:textColor="@color/black"

        android:textSize="10sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsn" />

    <TextView
        android:id="@+id/pparticulars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:singleLine="false"
        android:text="@string/particulars"
        android:textColor="@color/black"
        android:textSize="10sp"

        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/psn" />

    <TextView
        android:id="@+id/phsncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/hsn_code"
        android:textSize="10sp"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/psn" />

    <TextView
        android:id="@+id/prate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:textSize="10sp"
        android:text="@string/rate"
        android:layout_marginLeft="7dp"


        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/psn" />

    <TextView
        android:id="@+id/pquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"

        android:textColor="@color/black"
        android:text="@string/quantity"
        android:layout_marginLeft="10dp"


        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/psn" />

    <TextView
        android:id="@+id/pamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:textSize="10sp"
        android:text="@string/amount"
        android:layout_marginLeft="15dp"


        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/psn" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="225dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="17dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="175dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="255dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="300dp" />




</androidx.constraintlayout.widget.ConstraintLayout>