<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quotation">



    <TextView
        android:id="@+id/Dname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:importantForAutofill="no"
        android:text="Name"
        android:layout_margin="20dp"

        android:textColor="@color/black"

        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dname" />


    <!--Index -->


    <TextView
        android:id="@+id/textsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:text="@string/s_n"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/textparticulars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/particulars"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/textsn"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/textsn" />

    <TextView
        android:id="@+id/texthsncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="1dp"
        android:text="@string/hsn_code"
        android:textColor="@color/black"
        android:textSize="11sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textsn"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/textsn" />

    <TextView
        android:id="@+id/textrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/rate"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="1dp"

        app:layout_constraintBottom_toBottomOf="@+id/textsn"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/textsn" />

    <TextView
        android:id="@+id/textquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="2dp"


        app:layout_constraintBottom_toBottomOf="@+id/textsn"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textsn" />

    <TextView
        android:id="@+id/textamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="3dp"


        app:layout_constraintBottom_toBottomOf="@+id/textsn"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/textsn" />

    <!--  product recyclerview-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/displayRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/guideline"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsn"
        tools:listitem="@layout/displayproduct"

        />


    <!--    Total, cgst, sgst, igst , amount, g.total -->


    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Total :"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <TextView
        android:id="@+id/CGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="CGST@9% :"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/SGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="SGST@9% :"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/CGST" />


    <TextView
        android:id="@+id/IGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="IGST@...% :"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/SGST" />

    <TextView
        android:id="@+id/AMOUNT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Amount : "
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/IGST" />

    <TextView
        android:id="@+id/GTOTAL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="G.Total : "
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/AMOUNT" />

    <!--outptu-->
    <TextView
        android:id="@+id/Outputtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="Total :"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <TextView
        android:id="@+id/OutputCGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="CGST @ 9% :"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/Outputtotal" />

    <TextView
        android:id="@+id/OutputSGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="SGST @ 9% : "
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/OutputCGST" />


    <TextView
        android:id="@+id/OutputIGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="IGST @ ...% : "
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/OutputSGST" />

    <TextView
        android:id="@+id/OutputAMOUNT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="Amount : "
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/OutputIGST" />

    <TextView
        android:id="@+id/OutputGTOTAL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="G.Total : "
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/OutputAMOUNT" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="290dp" />

    <Button
        android:id="@+id/PrintQuotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Print Quotation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/PrintBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Print Bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrintQuotation" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7414501" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="175dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="260dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="310dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="233dp" />


</androidx.constraintlayout.widget.ConstraintLayout>